--- a/popup.html
+++ b/popup.html
@@ -20,44 +20,63 @@
       <div class="custom-select" style="width: 200px">
         <select name="selection" id="selection_id">
           <option value="게시판/말머리">게시판 / 말머리</option>
-          <option value="자유게시판/내가 싼 똥">자유게시판 / 내가 싼 똥</option>
+          <option value="자유게시판/내가 싼 똥">
+            💩 자유게시판 / 내가 싼 똥
+          </option>
           <option value="유머,정보 게시판/펌글과 유머">
-            유머,정보 게시판 / 펌글과 유머
+            🤣 유머,정보 게시판 / 펌글과 유머
           </option>
           <option value="유머,정보 게시판/정보와 꿀팁">
-            유머,정보 게시판 / 정보와 꿀팁
+            🤣 유머,정보 게시판 / 정보와 꿀팁
           </option>
           <option value="이세돌┃자유게시판/아이네">
-            이세돌┃자유게시판 / 아이네
+            🥰 이세돌┃자유게시판 / 아이네
           </option>
           <option value="이세돌┃자유게시판/비챤">
-            이세돌┃자유게시판 / 비챤
+            🥰 이세돌┃자유게시판 / 비챤
           </option>
           <option value="이세돌┃자유게시판/릴파">
-            이세돌┃자유게시판 / 릴파
+            🥰 이세돌┃자유게시판 / 릴파
           </option>
           <option value="이세돌┃자유게시판/징버거">
-            이세돌┃자유게시판 / 징버거
+            🥰 이세돌┃자유게시판 / 징버거
           </option>
           <option value="이세돌┃자유게시판/고세구">
-            이세돌┃자유게시판 / 고세구
+            🥰 이세돌┃자유게시판 / 고세구
           </option>
           <option value="이세돌┃자유게시판/주르르">
-            이세돌┃자유게시판 / 주르르
+            🥰 이세돌┃자유게시판 / 주르르
           </option>
           <option value="이세돌┃자유게시판/자유">
-            이세돌┃자유게시판 / 자유
+            🥰 이세돌┃자유게시판 / 자유
           </option>
           <option value="고멤 게시판/고멤 이야기">
-            고멤 게시판 / 고멤 이야기
+            🤡 고멤 게시판 / 고멤 이야기
           </option>
-          <option value="고멤 게시판/고멤 스샷">고멤 게시판 / 고멤 스샷</option>
-          <option value="◈ 왁 굳 이 야 기 ◈/왁굳이야기">
-            ◈ 왁 굳 이 야 기 ◈ / 왁굳이야기
+          <option value="고멤 게시판/고멤 스샷">
+            🤡 고멤 게시판 / 고멤 스샷
           </option>
-          <option value="◈ 왁 굳 이 야 기 ◈/오뱅알 후기">
-            ◈ 왁 굳 이 야 기 ◈ / 오뱅알 후기
+          <option value="왁 굳 이 야 기/왁굳이야기">
+            👃🏼왁 굳 이 야 기👃🏼 / 왁굳이야기
           </option>
+          <option value="👃🏼왁 굳 이 야 기👃🏼/오뱅알 후기">
+            👃🏼왁 굳 이 야 기👃🏼 / 오뱅알 후기
+          </option>
+          <option value="이세돌┃핫클립/아이네">
+            🎬 이세돌┃핫클립 / 아이네
+          </option>
+          <option value="이세돌┃핫클립/비챤">🎬 이세돌┃핫클립 / 비챤</option>
+          <option value="이세돌┃핫클립/릴파">🎬 이세돌┃핫클립 / 릴파</option>
+          <option value="이세돌┃핫클립/징버거">
+            🎬 이세돌┃핫클립 / 징버거
+          </option>
+          <option value="이세돌┃핫클립/고세구">
+            🎬 이세돌┃핫클립 / 고세구
+          </option>
+          <option value="이세돌┃핫클립/주르르">
+            🎬 이세돌┃핫클립 / 주르르
+          </option>
+          <option value="이세돌┃핫클립/자유">🎬 이세돌┃핫클립 / 자유</option>
           <!-- 팬아트 말머리, 핫클립 게시판 추가 예정 -->
         </select>
       </div>
