--- a/popup.html
+++ b/popup.html
@@ -76,7 +76,29 @@
           <option value="이세돌┃핫클립/주르르">
             🎬 이세돌┃핫클립 / 주르르
           </option>
-          <option value="이세돌┃핫클립/자유">🎬 이세돌┃핫클립 / 자유</option>
+          <option value="이세돌┃핫클립/2인이상">
+            🎬 이세돌┃핫클립 / 2인이상
+          </option>
+          <option value="이세돌┃팬아트/아이네">
+            🎨 이세돌┃팬아트 / 아이네
+          </option>
+          <option value="이세돌┃팬아트/비챤">🎨 이세돌┃팬아트 / 비챤</option>
+          <option value="이세돌┃팬아트/릴파">🎨 이세돌┃팬아트 / 릴파</option>
+          <option value="이세돌┃팬아트/징버거">
+            🎨 이세돌┃팬아트 / 징버거
+          </option>
+          <option value="이세돌┃팬아트/고세구">
+            🎨 이세돌┃팬아트 / 고세구
+          </option>
+          <option value="이세돌┃팬아트/주르르">
+            🎨 이세돌┃팬아트 / 주르르
+          </option>
+          <option value="이세돌┃팬아트/2인 이상">
+            🎨 이세돌┃팬아트 / 2인 이상
+          </option>
+          <option value="이세돌┃팬아트/기타">
+            🎨 이세돌┃팬아트 / 기타
+          </option>
           <!-- 팬아트 말머리, 핫클립 게시판 추가 예정 -->
         </select>
       </div>
